crates/kermlc/tests/fixtures/valid/multiplicity_feature_ref.kerml
package MultRef {
    type Connection {
        feature portCount : Anything [1];
        feature ports : Anything [1..portCount];
    }
}
