crates/kermlc/tests/fixtures/invalid/multiplicity_unresolved_ref.kerml
package Bad {
    type T {
        feature f : Anything [1..noSuchFeature];
    }
}
